fixL layout bugs

--- a/src/components/PriceFilter/PriceFilter.scss
+++ b/src/components/PriceFilter/PriceFilter.scss
@@ -11,6 +11,7 @@
   &__col {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 10px;
   }
 
@@ -29,6 +30,6 @@
   }
 
   &__box {
-    width: 210px;
+    width: 200px;
   }
 }
